--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<title>Tools-header</title>
 		<meta name="description" content="">
 		<meta name="keywords" content="">
-		<link href="/assets/styles/app.min.css?v=8335970" rel="stylesheet">
+		<link href="assets/styles/app.min.css?v=8335970" rel="stylesheet">
 	</head>
 
 	<body class="page">
