--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									</ul>
 									<ul class="gallery">
 										<li class="gallery__item">
-											<img src="assets/images/3.jpg" alt="Дрель" class="gallery__img" title="" />
+											<img src="/assets/images/3.jpg" alt="Дрель" class="gallery__img" title="" />
 										</li>
 										<li class="gallery__item">
 											<img src="assets/images/2.jpg" alt="Дрель" class="gallery__img" title="" />
